# nautobot-ipfdemo

./: .travis.yml  PLUGIN_DEVELOPMENT.md  README.md  invoke.example.yml  invoke.production.example.yml  mkdocs.yml  nautobot_config.py  pyproject.toml  tasks.py
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
docs/: index.md
environments/: Dockerfile  creds.example.env  docker-compose.base.yml  docker-compose.dev-prod.yml  docker-compose.dev.yml  docker-compose.local.yml  docker-compose.prod.yml  nginx.conf  production.env  prometheus.yml
jobs/: __init__.py
plugins/ipfdemo_plugin/: pyproject.toml
plugins/ipfdemo_plugin/nautobot_ipfdemo_plugin/: __init__.py  healthcheck.py  urls.py  worker.py
plugins/ipfdemo_plugin/nautobot_ipfdemo_plugin/tests/: __init__.py  test_healthcheck.py
